turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:30: error: missing argument list for method lotissement
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `lotissement _` or `lotissement(_)` instead of `lotissement`.
  lotissement
  ^